// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Text Snapshot Tests renders body text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#FFFFFF",
        "fontSize": 16,
      },
      {
        "fontSize": 16,
      },
      {
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Corpo texto
</Text>
`;

exports[`Text Snapshot Tests renders bold text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#FFFFFF",
        "fontSize": 16,
      },
      {
        "fontSize": 16,
      },
      {
        "fontWeight": "700",
      },
      undefined,
    ]
  }
>
  Texto negrito
</Text>
`;

exports[`Text Snapshot Tests renders error text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#FFFFFF",
        "fontSize": 16,
      },
      {
        "color": "#FF3B30",
        "fontSize": 12,
      },
      {
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Texto erro
</Text>
`;

exports[`Text Snapshot Tests renders large weight text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#FFFFFF",
        "fontSize": 16,
      },
      {
        "fontSize": 16,
      },
      {
        "fontWeight": "700",
      },
      undefined,
    ]
  }
>
  Texto em negrito
</Text>
`;

exports[`Text Snapshot Tests renders muted text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#FFFFFF",
        "fontSize": 16,
      },
      {
        "color": "#9BA1A6",
        "fontSize": 12,
      },
      {
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Texto de ajuda
</Text>
`;

exports[`Text Snapshot Tests renders small variant text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#FFFFFF",
        "fontSize": 16,
      },
      {
        "color": "#9BA1A6",
        "fontSize": 14,
      },
      {
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Texto de rótulo
</Text>
`;
